update: anime by id> components was fixed and also style was changed added flex wrap for badges

--- a/src/app/(routes)/anime/[id]/[title]/styles.module.scss
+++ b/src/app/(routes)/anime/[id]/[title]/styles.module.scss
@@ -21,6 +21,7 @@
             align-items: flex-center;
             justify-content: start;
             gap: 0.5rem;
+            flex-wrap: wrap;
         }
     }
 }
